# orcai-gui

./: .gitignore  .justfile  README.md  dmg_settings.py  orcAI.spec  pyproject.toml
src/orcaigui/: about.py  audio_file_loader.py  cli.py  curate_widget.py  dialogs.py  extensions.py  inspector.py  io.py  main.py  orcaidata.py  pgaxis.py  spectrogram_widget.py  workers.py
